// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app icon should render correctly 1`] = `
<AppItem
  app={
    Object {
      "href": "http://fake.fr",
      "name": "Drive",
      "slug": "cozy-drive",
    }
  }
  t={[Function]}
>
  <AppLinker
    href="http://fake.fr"
    nativePath="/"
    onAppSwitch={[Function]}
    slug="cozy-drive"
  >
    <li
      className="coz-nav-apps-item"
    >
      <a
        data-icon="icon-cozy-drive"
        href="http://fake.fr/"
        onClick={null}
        role="menuitem"
        title="Drive"
      >
        <AppIcon
          app={
            Object {
              "href": "http://fake.fr",
              "name": "Drive",
              "slug": "cozy-drive",
            }
          }
          className="coz-nav-apps-item-icon"
          domain="cozy.tools"
          key="cozy-drive"
          secure={true}
        >
          <div
            className="c-loading-placeholder c-app-icon coz-nav-apps-item-icon"
          />
        </AppIcon>
        <p
          className="coz-label"
        >
          Drive
        </p>
      </a>
    </li>
  </AppLinker>
</AppItem>
`;

exports[`app icon should render correctly with target mobile and providing fetchIcon to AppIcon 1`] = `
<AppItem
  app={
    Object {
      "href": "http://fake.fr",
      "name": "Drive",
      "slug": "cozy-drive",
    }
  }
  t={[Function]}
>
  <AppLinker
    href="http://fake.fr"
    nativePath="/"
    onAppSwitch={[Function]}
    slug="cozy-drive"
  >
    <li
      className="coz-nav-apps-item"
    >
      <a
        data-icon="icon-cozy-drive"
        href="http://fake.fr/"
        onClick={null}
        role="menuitem"
        title="Drive"
      >
        <AppIcon
          app={
            Object {
              "href": "http://fake.fr",
              "name": "Drive",
              "slug": "cozy-drive",
            }
          }
          className="coz-nav-apps-item-icon"
          fetchIcon={[Function]}
          key="cozy-drive"
        >
          <div
            className="c-loading-placeholder c-app-icon coz-nav-apps-item-icon"
          />
        </AppIcon>
        <p
          className="coz-label"
        >
          Drive
        </p>
      </a>
    </li>
  </AppLinker>
</AppItem>
`;
